--- a/gallery.html
+++ b/gallery.html
@@ -153,7 +153,7 @@
 									</div>
 								</header>
 								<a href="#" class="image featured"><img src="images/AnimatedGif.gif" alt="" /></a>
-								<p> This is an original gif that I made using the timeline effect on Photoshop. I made this gif by drawing many faces and adding different emotions to the purple circle. I got the inspiration for my gif because I wanted to make a gif that expresses how i feel and i decided to express it by using drawings emojis. </p>
+								<p> This is an original gif that I made using the timeline effect on Photoshop. I decided to make a gif with different emotions because it displays part of my personality. My mood changes really quick.</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button big">Continue Reading</a></li>
