--- a/gallery.html
+++ b/gallery.html
@@ -177,7 +177,7 @@
 									</div>
 								</header>
 								<a href="#" class="image featured"><img src="images/morphing.gif" alt="" /></a>
-								<p>While completing this assignment, I learned how to shape tween. I decided to end the gif with a picture of a Shiba Inu because I love dogs and a Shiba is one of my favorite breed.</p>
+								<p>While completing this assignment, I learned how to shape tween. I decided to end the gif with a picture of a Shiba Inu because I love dogs and Shibas are one of my favorite breeds.</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button big">Continue Reading</a></li>
