--- a/gallery.html
+++ b/gallery.html
@@ -248,8 +248,8 @@
 										<a href="#" class="author"><span class="name">Amy H</span><img src="images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="#" class="image featured"><iframe src="nameblowup.swf"></iframe> alt="" /></a>
-								<p>For the bouncing ball assignment, I decided to create an animation of a volleyball bouncing. Throughout this assignment, I learned how to create keyframes and move an object around on and off the stage. I also learned how to use the stroke & fill tool, oval tool, and how to transform my object into a symbol.</p>
+								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe> alt="" /></a>
+								<p></p>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button big">Continue Reading</a></li>
