--- a/gallery.html
+++ b/gallery.html
@@ -248,7 +248,7 @@
 										<a href="#" class="author"><span class="name">Amy H</span><img src="images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe> alt="" /></a>
+								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe>/></a>
 								<p></p>
 								<footer>
 									<ul class="actions">
