--- a/gallery.html
+++ b/gallery.html
@@ -248,8 +248,8 @@
 										<a href="#" class="author"><span class="name">Amy H</span><img src="images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe>/></a>
-								<p></p>
+								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe></a>
+								<p>For this assignment, I typed my name with the color and style of my choice. I learned how to turn my name into a graphic symbol. I also learned that if you want to shrink something in proportion using the transform tool, then you have to hold shift. I also learned to change the color effect of the keyframes. </p>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button big">Continue Reading</a></li>
