--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
 							<ul>
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="#">Gallery</a></li>
+								<li><a href="blowup.html">Blow Up</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
