--- a/blowup.html
+++ b/blowup.html
@@ -20,7 +20,8 @@
 						<nav class="links">
 							<ul>
 								<li><a href="aboutme.html">About Me</a></li>
-								<li><a href="#">Gallery</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="#">Blow Up</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
