--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
 							<ul>
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
-								<li<a href="blowup.html">Blow Up</a></li>
+								<li><a href="blowup.html">Blow Up</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
