--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,7 @@
 						<h1><a href="index.html">Home</a></h1>
 						<nav class="links">
 							<ul>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="blowup.html">Blow Up</a></li>
