--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 						<nav class="links">
 							<ul>
 								<li><a href="aboutme.html">About Me</a></li>
-								<li><a href="#">Gallery</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="blowup.html">Blow Up</a></li>
 							</ul>
 						</nav>
