--- a/blowup.html
+++ b/blowup.html
@@ -22,6 +22,7 @@
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="blowup.html">Blow Up</a></li>
+								<li><a href="snowboarder.html">Snow Boarder</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
