--- a/snowboarder.html
+++ b/snowboarder.html
@@ -104,7 +104,7 @@
 										<a href="#" class="author"><span class="name">Amy H</span><img src="images/avatar.jpg" alt="" /></a>
 									</div>
 								</header>
-								<a href="#" class="image featured"><iframe src=images/nameblowup.swf></iframe></a>
+								<a href="#" class="image featured"><iframe src=images/snowboarder.swf></iframe></a>
 								<p>For this snowboarder flash assignment, we had to extract a snowboarder of our choice on photoshop then put the final png into flash. I learned that if you want to import a file onto flash, you have to use "export" instead of "open". I also learned how to use the onion skin tool. The onion skin tool was very helpful for looking at my previous adjustments.</p>
 								<footer>
 									<ul class="actions">
