--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="blowup.html">Blow Up</a></li>
 								<li><a href="snowboarder.html">Snow Boarder</a></li>
+								<li><a href="scrollingbackground.html">City</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
