--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,8 @@
 								<li><a href="aboutme.html">About Me</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
 								<li><a href="blowup.html">Blow Up</a></li>
-								<li><a href="snowboarder.html">Snow Boarder</a></li>							
+								<li><a href="snowboarder.html">Snow Boarder</a></li>
+								<li><a href="scrollingbackground.html">City</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
