--- a/scrollingbackground.html
+++ b/scrollingbackground.html
@@ -106,7 +106,7 @@
 									</div>
 								</header>
 								<a href="#" class="image featured"><iframe src=images/scrollingbackground.swf></iframe></a>
-								<p>Within this assignment, I learned to create a scrolling background. I enjoyed this assignment because we were able to use 2 objects of our choice and 2 sounds of our choice.</p>
+								<p>Within this assignment, I learned to create a scrolling background. I learned how to use Audacity to edit a sound that may be too long. I enjoyed this assignment because we were able to use 2 objects of our choice and 2 sounds of our choice.</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="#" class="button big">Continue Reading</a></li>
